--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <body>
         <h1>Week 6 Coding Assignment</h1>
 
+        <h2>The game should start automatically. If not, open console in browser and enter "game.start()".</h2>
+
         <h2>I added a .gitignore that includes node_modules</h2>
         <h3>Initialize node in your terminal for testing to work.</h3>
 
